<resources>
    <string name="app_name">FeMail</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="profile_image">Profile image</string>
    <string name="star_icon">Star icon</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="register">Register</string>
    <string name="register_button">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="choose_image">Choose Image</string>
    <string name="register_error_username">Username must contain only lowercase letters and numbers, and include at least 3 letters.</string>
    <string name="register_error_password">Password must be at least 8 characters and include letters and numbers.</string>
    <string name="register_error_confirm_password">Passwords do not match.</string>
    <string name="register_error_full_name">Full name is required.</string>
    <string name="register_error_phone">Phone must be 10 digits.</string>
    <string name="register_error_birth_date">Birth date is required and you must be at least 14 years old.</string>
    <string name="register_error_gender">Gender is required.</string>
    <string name="register_error_image">Profile picture is required.</string>
    <string name="register_error_image_type">Please select a valid image file.</string>
    <string name="register_error_image_size">File size must be less than 5MB.</string>
    <string name="register_success">Registration successful!</string>
    <string name="register_failed">Registration failed. Please try again.</string>
    <string-array name="gender_array">
        <item>@string/select_gender</item>
        <item>@string/female</item>
        <item>@string/male</item>
        <item>@string/other</item>
    </string-array>
    <string name="gender_female">female</string>
    <string name="female_icon">♀</string>
    <string name="gender_male">male</string>
    <string name="male_icon">♂</string>
    <string name="profile_birthday">Birthday: %1$s</string>
    <string name="profile_phone">Phone number: %1$s</string>
    <string name="profile_end_mail">%1$s@femail.com</string>
    <string name="profile_hi">Hi, %1$s! %2$s</string>
    <string name="profile_log_out">Log Out</string>
    <string name="new_message">New Message</string>
    <string name="edit_message">Edit Message</string>
    <string name="mandatory_fields">All fields are mandatory</string>
    <string name="send_category">send</string>
    <string name="draft_category">draft</string>
    <string name="new_label">New Label</string>
    <string name="new_label_request">Please enter a new label name:</string>
    <string name="label_name">Label name</string>
    <string name="edit_label">Edit Label</string>
    <string name="remove_label">Remove Label</string>
    <string name="delete_label">Delete Label</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="empty_label">Label name cannot be empty</string>
    <string name="duplicate_label">Label name already exists</string>
    <string name="delete_the_label">Delete the Label "%1$s"?</string>
    <string name="compose">Compose</string>
    <string name="cancel">Cancel</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="save_as_draft">Save as draft</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_too_short">Password must be at least 8 characters</string>
</resources>